[project]
name = "hoyo-buddy"
requires-python = ">=3.11"

[tool.poetry]
authors = ["seriaati <seria.ati@gmail.com>"]
description = "Elevate your Hoyoverse experience."
license = "GPL-3.0"
name = "hoyo-buddy"
package-mode = false
readme = "README.md"
version = "1.1.2"

[tool.poetry.dependencies]
aiocache = "^0.12.2"
aiofiles = "^23.2.1"
ambr-py = "^1.7.7"
asyncache = "^0.3.1"
asyncpg = "^0.29.0"
asyncpg-listen = "^0.0.6"
cachetools = "^5.3.3"
discord-py = "^2.4.0"
enka-api = "^2.2.4"
fake-useragent = "^1.5.1"
genshin = {git = "https://github.com/seriaati/genshin.py", extras = ["all"]}
gitpython = "^3.1.42"
hakushin-py = "^0.3.2"
jishaku = "^2.5.1"
loguru = "^0.7.2"
novelai = {git = "https://github.com/kokosensei/NovelAI-API"}
orjson = "^3.9.9"
pillow = "^10.1.0"
psutil = "^6.0.0"
pydantic = "^2.6.4"
python = "^3.11"
python-dotenv = "^1.0.0"
sentry-sdk = "^2.4.0"
seria-library = {git = "https://github.com/seriaati/seria-library"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.0"}
yatta-py = "^1.3.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
aerich = "^0.7.2"
icecream = "^2.1.3"
pre-commit = "^3.6.0"
ruff = "^0.4.0"

[tool.poetry.group.linux]
optional = true

[tool.poetry.group.linux.dependencies]
uvloop = "^0.19.0"

[tool.aerich]
location = "./migrations"
src_folder = "./."
tortoise_orm = "hoyo_buddy.db.config.DB_CONFIG"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
  "E501",
  "ANN401",
  "ANN101",
  "ANN102",
  "PLR0913",
  "PLR2004",
  "PLR0917",
  "PLR6301",
  "ANN002",
  "ERA001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "RUF100",
]
preview = true
select = [
  "E",
  "W",
  "C90",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
  "N",
  "TCH",
  "ANN",
  "ASYNC",
  "A",
  "C4",
  "EM",
  "FA",
  "ICN",
  "G",
  "PIE",
  "T20",
  "ARG",
  "ERA",
  "LOG",
  "PL",
  "TRY",
  "D",
  "RUF",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F401"]
"./migrations/*.py" = ["ALL"]
"hoyo_buddy/draw/**/*.py" = ["PLR", "C"]
"hoyo_buddy/models.py" = ["TCH002"]
"playground.*.py" = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"
