[project]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
dependencies = [
  "aiocache>=0.12.2",
  "aiofiles>=24.1.0",
  "ambr-py>=1.7.11",
  "asyncache>=0.3.1",
  "asyncpg>=0.29.0",
  "asyncpg-listen>=0.0.6",
  "cachetools>=5.5.0",
  "discord-py>=2.4.0",
  "enka-api>=2.2.5",
  "fake-useragent>=1.5.1",
  "genshin[all]",
  "gitpython>=3.1.43",
  "hakushin-py>=0.4.4",
  "jishaku>=2.5.2",
  "loguru>=0.7.2",
  "novelai",
  "orjson>=3.10.7",
  "pillow>=10.4.0",
  "psutil>=6.0.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "sentry-sdk>=2.13.0",
  "tortoise-orm>=0.21.6",
  "yatta-py>=1.3.8",
  "seria-library[files]>=1.5.4",
  "aerich>=0.7.2",
  "uvloop>=0.20.0; platform_system == 'Linux'",
  "flet>=0.24.0",
  "cryptography>=43.0.0",
  "pandas>=2.2.2",
  "fonttools>=4.53.1",
  "akasha-py>=0.2.3",
]
description = "A feature-rich Discord bot for Hoyoverse gamers."
license = { file = "LICENSE" }
name = "hoyo-buddy"
readme = "README.md"
requires-python = ">=3.11"
version = "1.12.1"

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
    "memory-profiler>=0.61.0",
]

[tool.uv.sources]
genshin = { git = "https://github.com/thesadru/genshin.py", branch = "master" }
novelai = { git = "https://github.com/kokosensei/NovelAI-API" }

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.aerich]
location = "./migrations"
src_folder = "./."
tortoise_orm = "hoyo_buddy.db.config.DB_CONFIG"
