[project]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
dependencies = [
  "aiocache>=0.12.2",
  "aiofiles>=24.1.0",
  "asyncache>=0.3.1",
  "asyncpg>=0.29.0",
  "asyncpg-listen>=0.0.6",
  "cachetools>=5.5.0",
  "discord-py[speed]>=2.5.0",
  "hakushin-py>=0.4.4",
  "jishaku>=2.5.2",
  "loguru>=0.7.2",
  "novelai",
  "orjson>=3.10.7",
  "pillow>=10.4.0",
  "psutil>=6.0.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "sentry-sdk>=2.13.0",
  "seria-library[files]>=1.5.4",
  "aerich>=0.7.2",
  "uvloop>=0.20.0; platform_system == 'Linux'",
  "flet[web]>=0.26.0",
  "cryptography>=43.0.0",
  "pandas>=2.2.2",
  "fonttools>=4.53.1",
  "tortoise-orm>=0.21.7",
  "genshin[auth,sqlite,socks-proxy]",
  "toml>=0.10.2",
  "enka[redis]>=2.4.3",
  "yatta-py>=1.3.11",
  "akasha-py>=0.2.9",
  "prometheus-client>=0.21.1",
  "pydantic-settings>=2.7.1",
  "ambr-py",
  "apscheduler>=3.11.0",
  "redis[hiredis]>=6.2.0",
]
description = "A feature-rich Discord bot for Hoyoverse gamers."
license = { file = "LICENSE" }
name = "hoyo-buddy"
readme = "README.md"
requires-python = ">=3.12"
version = "1.16.8"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
novelai = { git = "https://github.com/seriaati/NovelAI-API" }
genshin = { git = "https://github.com/thesadru/genshin.py", branch = "master" }
hakushin-py = { git = "https://github.com/seriaati/hakushin-py" }
enka = { git = "https://github.com/seriaati/enka-py" }
yatta-py = { git = "https://github.com/seriaati/yatta" }
ambr-py = { git = "https://github.com/seriaati/ambr" }


[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.aerich]
location = "./migrations"
src_folder = "./."
tortoise_orm = "hoyo_buddy.db.config.DB_CONFIG"
